fixed nav alignment

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -106,6 +106,7 @@ $md: 768px;
   color: $nav-primary;
   padding-left: 2rem;
   i {
+    width: 45px;
     padding-right: 1rem;
   }
 }
