--- a/scss/main.scss
+++ b/scss/main.scss
@@ -95,7 +95,6 @@ span {
     background: $bg-primary;
     min-width: 240px;
     max-height: 863px;
-    border-right: 1px solid #333;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
